# project-01

./: .bandit  .checkov.yml  .env.example  .gitignore  Dockerfile  Makefile  README.md  domain.json  prompt.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _deploy.yml  ci.yml  deploy-dev.yml  deploy-int.yml  deploy-prod.yml  terraform-plan-pr.yml
docs/: adding-a-job.md  architecture.md  ci-cd.md  creating-a-project.md  tasks.md  terraform.md
infrastructure/baseline/: glue_databases.tf  iam_orchestration.tf  kms.tf  observability.tf  outputs.tf  s3.tf  subnets.tf  variables.tf  vpc.tf
infrastructure/central/: iam_global.tf  outputs.tf  s3_artifacts.tf  s3_layers.tf  subnets.tf  variables.tf  vpc.tf
infrastructure/environments/dev/: backend.conf  main.tf
infrastructure/environments/int/: backend.conf  main.tf  outputs.tf
infrastructure/environments/prod/: .terraform.lock.hcl  backend.conf  main.tf  outputs.tf
infrastructure/foundation/: glue_databases.tf  iam_glue_job.tf  iam_orchestration.tf  iam_table_optimizer.tf  kms.tf  outputs.tf  s3.tf  subnets.tf  variables.tf  vpc.tf
infrastructure/jobs/: customer_jobs.tf  legacy_jobs.tf  sales_jobs.tf  variables.tf
infrastructure/modules/glue_catalog_database/: main.tf
infrastructure/modules/glue_catalog_table/: main.tf
infrastructure/modules/glue_iceberg_table/: main.tf
infrastructure/modules/glue_job/: main.tf
infrastructure/modules/glue_table_optimizer/: main.tf
infrastructure/modules/iam_glue_job/: main.tf
infrastructure/modules/iam_role/: main.tf
infrastructure/modules/iam_table_optimizer/: main.tf
infrastructure/modules/s3_bucket/: main.tf
infrastructure/modules/stepfunction_pipeline/: asl.json  main.tf
infrastructure/projects/: main.tf  variables.tf
infrastructure/projects/_template/: README.md  data.tf  iam.tf  jobs.tf  locals.tf  optimizers.tf  outputs.tf  pipelines.tf  project.json  providers.tf  tables.tf  variables.tf
infrastructure/projects/customers/: jobs.tf  optimizers.tf  outputs.tf  pipelines.tf  tables.tf  variables.tf
infrastructure/projects/fin01/: jobs.tf  optimizers.tf  outputs.tf  tables.tf  variables.tf
infrastructure/projects/legacy_refactor/: jobs.tf  optimizers.tf  outputs.tf  pipelines.tf  tables.tf  variables.tf
infrastructure/projects/project01/: iam.tf  jobs.tf  locals.tf  optimizers.tf  pipelines.tf  project.json  tables.tf  variables.tf
infrastructure/projects/sales/: jobs.tf  optimizers.tf  outputs.tf  pipelines.tf  tables.tf  variables.tf
infrastructure/projects/test02/: data.tf  iam.tf  jobs.tf  optimizers.tf  outputs.tf  pipelines.tf  project.json  providers.tf  tables.tf  variables.tf
scripts/: bootstrap.sh
setup/: README.md  bootstrap.sh  domain.json  init-terraform.sh
src/core/: __init__.py
src/core/config/: __init__.py  settings.py
src/core/iceberg/: __init__.py  catalog.py
src/core/io/: __init__.py  readers.py  writers.py
src/core/logging/: __init__.py  logger.py
src/core/quality/: __init__.py  checks.py
src/core/spark/: __init__.py  session.py
src/domain_project/: __init__.py
src/domain_project/core/: __init__.py  config.py  iceberg.py  logging.py  readers.py  spark_session.py  writers.py
src/jobs/_template/: job_example.py
src/jobs/fin01/: job_teste.py
tests/: test_args.py  test_config.py  test_jobs.py  test_logging.py
(+10 files in other folders)
